CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..


25 November 2008
+ Added plugIn function to form class.
+ Removed pass by reference call in Core.
+ Added extra match check to checkall javascript because match
  function is failing now for some reason.
+ Updated: javascript/check_all/head.js

Version 1.9.0
---------------------------------------------------------------------
20 November 2008
+ Fixed bug with database connection tracking. The table prefix was
  not taken into consideration.

18 November 2008
+ Database will not parse out longtext on mysql databases.

14 November 2008
+ Changed styles in default theme to accommodate menu changes.
+ Fixed some default theme styles that did not conform to standard.
+ Added jquery ui library files.

4 November 2008
+ Patch #2162757 by Eloi George. Changes restrictEdit function in Key.

3 November 2008
+ loadObject stops with a blank result instead of trying to plug
  results.
+ Default theme - fixed comment buttons

30 October 2008
+ Added error check for reroute function in Core

28 October 2008
+ DBPager - stripping tags from alt sort image parameter
+ File - getMimeType goes to a final test if mime_content_type fails.

27 October 2008
+ Open window javascript has a secure option that a child window can
  use to test the validity of the parent.
+ Core : securePopup function tests the validity of the opener window
  dependant on the use of the secure option in open_window
+ New javascript secure_pop : used by Core to assure a parent called
  the child window.
+ Link
  o Can now salt the authkey with its values.
  o convertAmp function added
+ Text : added saltArray function to help with salts from arrays
+ Added missing fckeditor improvements to update script.

20 October 2008
+ Blog summary added to key in conversion.
+ Init.php - setlocale tries different utf8 configurations
+ FCKeditor - changed option in custom.js to prevent blank paragraph
  tags.