@@ -2,13 +2,21 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file..
 
+5 December 2008
++ Text
+  o Added utf8 encoding before htmlentities call in parseInput to
+    prevent blank text return.
+  o Fixed breaker adding extra newlines.
+
 
 25 November 2008
 + Added plugIn function to form class.
 + Removed pass by reference call in Core.
 + Added extra match check to checkall javascript because match
   function is failing now for some reason.
++ Module : error variable made public to prevent error. Thanks Greg.
 + Updated: javascript/check_all/head.js
+
 
 Version 1.9.0
 ---------------------------------------------------------------------
